--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,20 @@ pdfplumber==0.11.6
 python-dotenv==1.1.0
 PyMuPDF==1.25.5
 python-docx==1.1.2
+
+firebase-admin>=6.0.0
+pyrebase4>=4.5.0
+
+# Image processing
+Pillow>=9.0.0
+
+# Country data
+pycountry>=22.3.5
+
+# Date/time
+python-dateutil>=2.8.2
+pytz>=2022.1
+
+# Optional (if needed for your firebase_config)
+google-auth>=2.0.0
+google-cloud-firestore>=2.0.0
