--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ streamlit_sortables>=0.3.1
 # Image processing
 Pillow>=9.0.0
 PyPDF2>=3.0.0
+APScheduler>=3.11.0
 
 # Country data
 pycountry>=22.3.5
