--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-dotenv==1.1.0
 PyMuPDF==1.25.5
 python-docx==1.1.2
 docxtpl==0.19.1
+num2words==0.5.14
 
 firebase-admin>=6.0.0
 pyrebase4>=4.5.0
